# mock-and-roll

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .python-version  ALPINE_FIX.md  ALPINE_SETUP.md  CHANGELOG.md  CHANGES.md  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  README.md  README_temp.md  SCRIPTS.md  __init__.py  docker-compose.yml  docker-compose_test.yml  get_logs.sh  mkdocs.yml  mockctl  mockserver  pyproject.toml  requirements.txt  run.sh  run_server.py  setup_alpine.sh  setup_environment.sh  start_vmanage_api.sh  stop_vmanage_api.sh  test_search_functionality.py  test_vmanage_api.sh
.github/: copilot-instructions.md
.github/workflows/: docs.yml
config/: endpoints.json
configs/airgapped/: api.json
configs/basic/: api.json  auth.json  endpoints.json
configs/persistence/: api.json  auth.json
configs/vmanage/: README.md  api.json  auth.json  test_vmanage_api.py  test_vmanage_auth.sh
configs/webex/: README.md  api.json  auth.json  endpoints.json
docs/: DOCUMENTATION_ORGANIZATION.md  INSTALLATION.md  README.md  changelog.md  configuration.md  features.md  index.md  quick-start.md
scripts/: README.md  config_help.sh  get_logs.sh  help.sh  kill_all_servers.sh  list_servers.sh  server_state.sh  setup_alpine.sh  setup_environment.sh  start_server.sh  start_vmanage_api.sh  stop_server.sh  stop_vmanage_api.sh  success_report.sh  test_api.py  test_server.sh  test_vmanage_api.sh
setup/: add_to_path.sh  alpine.sh  alpine_minimal.sh  setup_airgapped.sh
src/: main.py  pyproject.toml
src/app/: factory.py  swagger_airgapped.py
src/auth/: security.py
src/cli/: mockctl.py  mockserver.py
src/cli/application/: __init__.py  server_management.py
src/cli/domain/: __init__.py  entities.py  repositories.py
src/cli/examples/: extension_example.py
src/cli/infrastructure/: __init__.py  filesystem.py  log_search.py  process.py
src/cli/interface/: __init__.py  commands.py  presentation.py
src/config/: auth.json  endpoints.json  loader.py  logging_config.py
src/handlers/: routes.py
src/middleware/: __init__.py  logging_middleware.py  system_auth.py
src/models/: dynamic.py
src/persistence/: memory_store.py  redis_client.py  store.py
src/processing/: templates.py
src/routes/: cache_management.py  logging_management.py  setup.py
src/static/: swagger-ui-template.html
tests/: conftest.py  test_airgapped.py  test_auth_data_verification.py  test_auth_placeholders.py  test_binary_content_logging.py  test_cleanup_command.py  test_correlation.py  test_dynamic_security_schemes.py  test_integration_verification.py  test_log_deletion.py  test_logging_comprehensive.py  test_no_emoji.py  test_schema_validation.py  test_search_functionality.py  test_swagger_auth.py  test_system_auth.py  test_system_endpoints_integration.py  test_templates.py  test_webex_config.py  verify_vmanage_openapi.py
(+29 files in other folders)
