
[tool.poetry]
package-mode = false
name = "RestApiMockServer"
version = "0.1.0"
description = "Rest API Mock Server"
authors = ["Bruno van de Werve <bvandewe@cisco.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
redis = "^5.2.1"
pyhumps = "^3.8.0"
pyjwt = "^2.10.1"
python-dateutil = "^2.9.0.post0"
pre-commit = "^4.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8"
python-dotenv = "^1.1.0"
pytest-asyncio = "^0.26.0"

[tool.black]
line-length = 500

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
